<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/btn_back"
            style="@style/PopToBackImageViewStyle"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/img_logo_worker"
            style="@style/LogoMardexImageStyle"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--ttt-->
        <TextView
            android:id="@+id/txt_login_title"
            style="@style/TextTitleSignUpStyle"
            android:layout_width="0dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingLeft="@dimen/_16sdp"
            android:paddingRight="@dimen/_16sdp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo_worker" />

        <TextView
            android:id="@+id/txt_phone_title"
            style="@style/TextMiddleTitlePhoneSignUpStyle"
            android:text="@string/enter_phone_number_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_login_title" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_et_phone"
            style="@style/InputEditTextCardViewStyle"
            android:backgroundTint="@color/jobs_item_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_phone_title">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ll_et_phone"
                style="@style/InputEditTextLayoutStyle"
                android:hint="@string/phone_number_"
                app:startIconDrawable="@drawable/ic_phone">

                <br.com.sapereaude.maskedEditText.MaskedEditText
                    android:id="@+id/et_phone"
                    style="@style/InputMaskedEditTextPhoneStyle"
                    android:background="@color/jobs_item_color" />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/txt_password_title"
            style="@style/TextMiddleTitlePhoneSignUpStyle"
            android:text="@string/enter_password_ba"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_et_phone" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_et_password"
            style="@style/InputEditTextCardViewStyle"
            android:backgroundTint="@color/jobs_item_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_password_title">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ll_et_password"
                style="@style/InputEditTextLayoutStyle"
                android:hint="@string/password_"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/eye_grey"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/InputMaskedEditTextFullNameStyle"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:background="@color/jobs_item_color" />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/ll_forgot_password"
            style="@style/LinearLayoutStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_et_password">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextMedium"
                android:text="@string/forgot_password_" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_reset_password"
                style="@style/TextMedium"
                android:background="?selectableItemBackground"
                android:text="@string/restore_password_"
                android:textColor="@color/new_green" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_enter"
            style="@style/ButtonNextStyle"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="0dp"
            android:drawableEnd="@drawable/ic_arrow_white"
            android:text="@string/login_"
            app:backgroundTint="@color/new_green"
            app:cornerRadius="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_forgot_password" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_title_if_your_account"
            style="@style/TextMedium"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/account_not_available"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_enter" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_go_sign_up"
            style="@style/TextMedium"
            android:background="?selectableItemBackground"
            android:text="@string/go_to_sign_up"
            android:textColor="@color/new_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_if_your_account" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/AppVersionTextStyleIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mardex_v1_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_go_sign_up" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>