<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_white_90"
    tools:context=".ui.screen.working.profile.editpersonaldata_fragment.EditPersonalDataFragment">

    <ImageView
        android:id="@+id/btn_back"
        style="@style/PopToBackImageViewStyle"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/txt_title"
        style="@style/TextTitleEditFragmentStyle"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_8sdp"
        android:layout_width="0dp"
        android:text="@string/personal_data"
        app:layout_constraintStart_toStartOf="@+id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />

    <TextView
        android:id="@+id/txt_desc_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingEnd="@dimen/_8sdp"
        android:paddingStart="0dp"
        android:layout_width="0dp"
        style="@style/TextDescEditFragmentStyle"
        android:text="@string/fish_desc"
        app:layout_constraintStart_toStartOf="@+id/txt_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_full_name"
        style="@style/CardVETEditFragmentStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/txt_desc_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_desc_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_full_name"
            style="@style/EditTextEditFragmentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fio"
            android:singleLine="true" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        style="@style/ButtonSaveStyle"
        android:drawableEnd="@drawable/ic_arrow_white"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>