<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_20sdp"
    app:cardElevation="@dimen/_6sdp"
    android:layout_margin="@dimen/_10sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/notification_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_time"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/TextSmall"
            android:textColor="@color/new_green"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_15sdp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/notification_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_news"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextSmall"
            android:textColor="@color/new_green"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/notification_text"
            style="@style/TextSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:text="@string/text_order"
            android:textColor="@color/text_number_color"
            app:layout_constraintEnd_toStartOf="@+id/imageView_notification_next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notification_date" />

        <ImageView
            android:id="@+id/imageView_notification_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:contentDescription="@string/next"
            android:src="@drawable/ic_notification_next"
            app:layout_constraintBottom_toBottomOf="@id/notification_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/notification_text" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_94sdp"
            android:contentDescription="@string/image_notification"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notification_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>