<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/back_button"
        style="@style/PopToBackImageViewStyle"
        app:tint="@color/black"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
        android:id="@+id/dots_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        app:dampingRatio="0.5"
        app:dotsColor="#02C65C"
        app:dotsCornerRadius="@dimen/_50sdp"
        app:dotsSize="@dimen/_16sdp"
        app:dotsSpacing="@dimen/_6sdp"
        app:dotsStrokeColor="@color/teal_700"
        app:dotsStrokeWidth="2dp"
        app:stiffness="300" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        style="@style/ButtonNextStyle"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="0dp"
        android:drawableEnd="@drawable/ic_arrow_white"
        android:text="@string/next"
        app:backgroundTint="@color/new_green"
        app:cornerRadius="@dimen/_20sdp" />

    <TextView
        style="@style/AppVersionTextStyleIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mardex_v1_0" />

</LinearLayout>